<resources>
    <string name="app_name">BooKy</string>
    <!-- Strings related to login -->
    <string name="Nombre">Nombre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="Iniciar_Sesion">Iniciar Sesión</string>
    <string name="Invitar_Iniciar_Sesion">¿No te has registrado? Pulsa para registrarte</string>
    <string name="Telefono">Teléfono (con prefijo)</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>